--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1016,4 +1016,5 @@
     <!-- kill app long press back -->
     <string name="kill_app_longpress_back">Kill app back button</string>
     <string name="kill_app_longpress_back_summary">Kill the foreground app by long-pressing the back key</string>
+    <string name="long_press_kill_delay">App kill delay</string>
 </resources>
