DUTweaks: Running services icon toggle [2/2]
Change-Id: Id700ad1ec8b20d048b5faf0cd08749044e2d7c34
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>
Signed-off-by: Shubham Singh <coolsks94@gmail.com>
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -170,4 +170,7 @@
     <!-- AOSP Gestures -->
     <string name="aosp_gesture_preference">AOSP Gestures</string>
     <string name="aosp_gesture_summary">Gestures Settings of AOSP</string>
+
+    <string name="qs_running_services_title">Running Services Icon</string>
+    <string name="qs_running_services_summary">Enable the running services icon in the footer</string>
 </resources>
