--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -499,6 +499,9 @@
     <string name="statusbar_items_title">Statusbar icons</string>
     <string name="statusbar_items_summary">Toggle the visibility of icons in statusbar</string>
 
+    <!-- Lockscreen icons -->
+    <string name="lockscreen_tuner_title">Lockscreen shortcuts</string>
+
     <!-- Custom Ambient Display Config -->
     <string name="ambient_display_screen_title">Ambient Display</string>
     <string name="ambient_display_screen_summary">Custom Ambient Display Configuration</string>
