DUTweaks: Allow hiding lockscreen shortcuts on secure lockscreen [2/2]
Signed-off-by: Genkzsz11 <genkzsz11@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -960,4 +960,8 @@
     <!-- Allow fake signature -->
     <string name="allow_signature_fake">Allow signature spoofing</string>
     <string name="allow_signature_fake_summary">Allow apps to bypass security systems by pretending to be a different app.</string>
+
+    <!-- Hide Lockscreen shortcuts on secure Lockscreen --> 
+    <string name="lockscreen_hide_shortcuts_title">Hide Bottom Shortcuts</string> 
+    <string name="lockscreen_hide_shortcuts_summary">Hide Left-Right Shortcuts on secure lock screens</string> 
 </resources>
