--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -77,4 +77,8 @@
     <string name="powermenu_disabled_summary">Disable power menu on secure lockscreen</string>
     <string name="powermenu_lockscreen_title">Lockscreen visibility</string>
     <string name="powermenu_lockscreen_summary">Display power menu on a secured lockscreen</string>
+
+    <!-- Lockscreen battery info indicator  -->
+    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
+    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
 </resources>
