--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -299,6 +299,7 @@
     <string name="task_close_title">Task close animation</string>
     <string name="task_move_to_front_title">Move to front animation</string>
     <string name="task_move_to_back_title">Move to back animation</string>
+    <string name="task_open_behind_title">Task open behind animation</string>
     <string name="wallpaper_open_title">Wallpaper open animation</string>
     <string name="wallpaper_close_title">Wallpaper close animation</string>
     <string name="wallpaper_intra_open_title">Wallpaper intra open animation</string>
