DUTweaks: Hide arrows in network traffic indicators [2/2]

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -83,8 +83,6 @@
     <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
 
     <!-- Statusbar net monitor -->
-    <string name="traffic_title">Network Traffic</string>
-    <string name="traffic_summary">TNet traffic indicators</string>
     <string name="network_traffic_state_title">Network Traffic</string>
     <string name="network_traffic_state_summary">Show net activity in statusbar</string>
     <string name="network_traffic_type">Select net activity type</string>
@@ -92,4 +90,6 @@
     <string name="show_network_traffic_down">Downlink</string>
     <string name="show_network_traffic_all">Uplink and Downlink</string>
     <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
+    <string name="network_traffic_hidearrow">Hide arrows</string>
+    <string name="network_traffic_hidearrow_summary">Hide the network traffic indicator arrows</string>
 </resources>
