--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -983,4 +983,8 @@
 
     <string name="brightness_slider_qs_unexpanded">MIUI brightness slider</string>
     <string name="brightness_slider_qs_unexpanded_summary">Shows brightness slider below qs panel</string>
+
+    <!-- Quick Settings -->
+    <string name="lockscreen_qs_disabled_title">Disable quick settings when locked</string>
+    <string name="lockscreen_qs_disabled_summary">Disable expanding quick settings on secure lock screens</string>
 </resources>
