DUTweaks: Status bar notification ticker [2/2]
Configurable status bar ticker duration [1/2]

Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -63,6 +63,8 @@
     <string name="quicksettings_summary">Configure the layout of the quick settings area</string>
     <string name="traffic_title">Traffic indicators</string>
     <string name="traffic_summary">Enable and configure the traffic indicators</string>
+    <string name="ticker_title">Ticker</string>
+    <string name="ticker_summary">Enable the statusbar ticker and configure ticker related tweaks</string>
 
     <!-- Navigation -->
     <string name="buttons_title">Buttons</string>
@@ -948,4 +950,13 @@
     <string name="lockscreen_clock_default_bold">Default (bold)</string>
     <string name="lockscreen_clock_sammy">Sammy</string>
     <string name="lockscreen_clock_sammy_bold">Sammy (bold)</string>
+
+    <!-- Statusbar ticker -->
+    <string name="status_bar_ticker_title">Notifications Ticker</string>
+    <string name="status_bar_show_ticker_title">Ticker</string>
+    <string name="status_bar_show_ticker_summary">Notification preview in status bar</string>
+    <string name="ticker_animation_mode_title">Ticker animation</string>
+    <string name="ticker_animation_mode_alpha_fade">Fade</string>
+    <string name="ticker_animation_mode_scroll">Scroll</string>
+    <string name="ticker_tick_duration_title">Ticker duration</string>
 </resources>
