--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1150,6 +1150,7 @@
     <string name="theming_settings_dashboard_icons_random">Random Icon</string>
     <string name="theming_settings_dashboard_icons_random_bg_accent">Icon Random Bg Accent</string>
     <string name="theming_settings_dashboard_icons_accent_bg_random">Icon Accent Bg Random</string>
+    <string name="theming_settings_dashboard_icons_default_oneplus">OnePlus</string>
 
     <!-- Pulse -->
     <string name="pulse_help_policy_notice_summary">Pulse does not work with some audio sources when listening on device speaker</string>
