DUTweaks: notch-city: Add 3 mode display cutout handler [3/3] crvs: adapt to android 10
[AgentFabulous - POSP]
- Add the respective control in here
- Also add a little video illustration I made to go along with it :)

Change-Id: I38fb439046db010b8b45f2bf9b83b7ce8879e044
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: Genkzsz11 <genkzsz11@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1048,4 +1048,14 @@
     <!-- OOS clear all button -->
     <string name="enable_clear_all_button">Replace clear all text with nice button</string>
     <string name="enable_clear_all_button_summary">Show clear all notifications button in quick settings instead of default text one</string>
+
+    <!-- Display cutout options -->
+    <string name="display_cutout_style_title">Cutout style</string>
+    <string name="display_cutout_style_normal">Normal</string>
+    <string name="display_cutout_style_immerse">Immerse</string>
+    <string name="display_cutout_style_hide">Hide</string>
+    <string name="stock_statusbar_in_hide">Stock statusbar height</string>
+    <string name="stock_statusbar_in_hide_summary">Use default statusbar height in Hide</string>
+    <string name="cutout_main">Display cutout settings</string>
+    <string name="cutout_main_summary">They really cut corners with this one</string>
 </resources>
