--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -939,6 +939,9 @@
     <string name="qs_footer_text_string_summary">Set to empty for default</string>
 
     <!-- Lockscreen clock style -->
+    <string name="lock_date_style_title">Date style</string>
+    <string name="lock_owner_style_title">Owner style</string>
+    <string name="lock_typeface_style_title">Typeface style</string>
     <string name="lockscreen_clock_title">Clock style</string>
     <string name="lockscreen_clock_dialog_title">Select clock style</string>
     <string name="lockscreen_clock_hide">Hide</string>
