DUTweaks: Add Q text lockscreen clock style
Change-Id: Iabc45909252ebd761843717d6c1b6281cc4eaa01
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -946,6 +946,7 @@
     <string name="lockscreen_clock_default_bold">Default (bold)</string>
     <string name="lockscreen_clock_sammy">Sammy</string>
     <string name="lockscreen_clock_sammy_bold">Sammy (bold)</string>
+    <string name="lockscreen_clock_text">Typeface</string>
 
     <!-- Statusbar ticker -->
     <string name="status_bar_ticker_title">Notifications Ticker</string>
