--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -797,9 +797,16 @@
     <string name="signal_icon_switch_title">Signal Icon Switch</string>
     <string name="signal_icon_switch_summary">Toggle for Signal icon</string>
 
-    <!-- QS background opacity -->
-    <string name="qs_theme_category">Style</string>
+    <!-- QS themes -->
+    <string name="qs_theme_category">QS Themes</string>
     <string name="qs_panel_alpha_title">Background opacity</string>
+    <string name="qs_panel_color_title">QS Panel color</string>
+    <string name="qs_bg_wall_title">Use Wallpaper colors</string>
+    <string name="qs_bg_wall_summary">Set QS background color from Wallpaper</string>
+    <string name="qs_bg_use_fw">Use default colors</string>
+    <string name="qs_bg_use_fw_summary">Disable custom QS styles for external theme engines</string>
+    <string name="qs_bg_accent_title">Use Accent color</string>
+    <string name="qs_bg_accent_summary">Set QS background color from System Accent</string>
 
     <!-- QS header image -->
     <string name="status_bar_custom_header_title">Header image</string>
