DUTweaks: Add 'Invert layout' to navigation bar settings
Change-Id: Ic99baeee93c2463a476b7d48b8d6ed4786035b05
Signed-off-by: Volodymyr Zhdanov <wight554@gmail.com>
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -163,4 +163,7 @@
     <string name="qs_show_brightness_summary">Show a brightness slider in the quick settings panel</string>
     <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
     <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
+
+    <!-- Navbar Invert -->
+    <string name="navbar_invert_layout_title">Invert layout</string>
 </resources>
