--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -356,5 +356,11 @@
     <string name="qs_columns_landscape_title">Columns (Landscape)</string>
     <string name="sysui_qqs_count_title">Columns (Quickbar)</string>
     <string name="qs_tile_title_visibility_title">Tile title</string> 
-    <string name="qs_tile_title_visibility_summary">Display title below each tile</string> 
+    <string name="qs_tile_title_visibility_summary">Display title below each tile</string>
+
+    <!-- Fingerprint authentication vibration -->
+    <string name="fprint_sucess_vib_title">FP authentication vibration</string>
+    <string name="fprint_sucess_vib_summary">Vibrate when fingerprint authentication is successful</string>
+    <string name="fprint_error_vib_title">FP error vibration</string>
+    <string name="fprint_error_vib_summary">Vibrate when fingerprint authentication fails</string>
 </resources>
