--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -368,4 +368,7 @@
     <string name="lockscreen_media_category">Music</string>
     <string name="media_art_title">Media artwork</string>
     <string name="media_art_summary">Show media cover art as the lockscreen background</string>
+
+    <!-- Lock screen media blur -->
+    <string name="lockscreen_media_blur_title">Media artwork blur level</string>
 </resources>
