--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -46,6 +46,8 @@
     <string name="fingerprint_prefs_summary">Tweaks specific to the fingerprint scanner</string>
     <string name="lockscreen_items_title">Lockscreen items</string>
     <string name="lockscreen_items_summary">Customize the lockscreen</string>
+    <string name="lockscreen_style_title">Lockscreen Style</string>
+    <string name="lockscreen_style_summary">Customize the lockscreen Style</string>
     <string name="switch_settings_title">Element</string>
 
     <!-- Statusbar -->
