--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -904,4 +904,12 @@
     <string name="button_link_brightness_summary">Use screen brightness level</string>
     <string name="button_manual_brightness">Brightness level</string>
     <string name="button_backlight_enable_title">Allow backlight</string>
+
+    <!-- Power menu Animations  -->
+    <string name="power_menu_animation_title">Power menu animation</string>
+    <string name="power_menu_animation_summary">Change the enter/exit animation of the power menu</string>
+    <string name="power_menu_animation_dialog_title">Select power menu animation</string>
+    <string name="power_menu_animation_aosp">AOSP (default)</string>
+    <string name="power_menu_animation_bottom">Bottom</string>
+    <string name="power_menu_animation_top">Top</string>
 </resources>
