--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -363,4 +363,9 @@
     <string name="fprint_sucess_vib_summary">Vibrate when fingerprint authentication is successful</string>
     <string name="fprint_error_vib_title">FP error vibration</string>
     <string name="fprint_error_vib_summary">Vibrate when fingerprint authentication fails</string>
+
+    <!-- Lock screen cover art -->
+    <string name="lockscreen_media_category">Music</string>
+    <string name="media_art_title">Media artwork</string>
+    <string name="media_art_summary">Show media cover art as the lockscreen background</string>
 </resources>
