--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -408,4 +408,8 @@
     <string name="battery_percentage_off">Disabled</string>
     <string name="battery_percentage_on">Enabled</string>
     <string name="battery_percentage_charging">Enabled (While charging)</string>
+
+    <!-- Lock screen visualizer -->
+    <string name="lockscreen_visualizer_enable">Music Visualizer</string>
+    <string name="lockscreen_visualizer_enable_summary">Show visualizer bars while playing music</string>
 </resources>
