Add Pocket judge
Signed-off-by: ZeNiXxX <zenixxx.havoc@gmail.com>
Signed-off-by: Heinz Der Flugel <heinzdf@gabuters-dev.my.id>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1306,4 +1306,8 @@
     <!-- Volume per app -->
     <string name="show_app_volume_title">Show app volume</string>
     <string name="show_app_volume_summary">Show app volume in volume panel. Can be useful while playing music during games.</string>
+
+    <!-- Pocket judge -->
+    <string name="pocket_judge_title">Pocket detection</string>
+    <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
 </resources>
