DUTweaks: Add Pocket judge
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -670,4 +670,8 @@
     <string name="screen_state_toggles_mobile_data_summary">Mobile data will be disabled on screen off</string>
     <string name="screen_state_off_delay_title">Screen-off actions delay</string>
     <string name="screen_state_on_delay_title">Screen-on actions delay</string>
+
+    <!-- Pocket judge -->
+    <string name="pocket_judge_title">Pocket detection</string>
+    <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
 </resources>
