--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -518,4 +518,8 @@
     <string name="panel_porn_title">Power Menu Transparency</string>
     <string name="power_menu_transparency">Power/Reboot menu opacity</string>
     <string name="power_menu_dialog_dim">Power/Reboot dialog dim background amount</string>
+
+    <!-- Bluetooth status -->
+    <string name="bluetooth_battery_title">Bluetooth battery status</string>
+    <string name="bluetooth_battery_summary">Show battery level for the currently connected BT headset, if available.</string>
 </resources>
