--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -174,12 +174,15 @@
     <string name="double_tap_to_sleep_title">Status bar</string>
     <string name="double_tap_to_sleep_summary">Double-tap status bar to put the device to sleep</string>
 
-    <!-- Quick Settings brightness slider -->
-    <string name="qs_brightness_title">Brightness Options</string>
-    <string name="qs_show_brightness_title">Brightness slider</string>
-    <string name="qs_show_brightness_summary">Show a brightness slider in the quick settings panel</string>
-    <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
-    <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
+    <!-- Quick settings brightness slider -->
+    <string name="qs_brightness_slider_title">Brightness slider position</string>
+    <string name="qs_brightness_slider_hide">Hidden</string>
+    <string name="qs_brightness_slider_top">Top</string>
+    <string name="qs_brightness_slider_bottom">Bottom</string>
+
+    <!-- Quick settings brightness icon -->
+    <string name="brightness_icon_title">Auto brightness icon</string>
+    <string name="brightness_icon_summary">Show toggle for adaptive brightness near the slider</string>
 
     <!-- Navbar Invert -->
     <string name="navbar_invert_layout_title">Invert layout</string>
