--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -522,4 +522,7 @@
     <!-- Bluetooth status -->
     <string name="bluetooth_battery_title">Bluetooth battery status</string>
     <string name="bluetooth_battery_summary">Show battery level for the currently connected BT headset, if available.</string>
+
+    <!-- Volume dialog timeout -->
+    <string name="volume_dialog_timeout_title">Volume dialog timeout</string>
 </resources>
