DUTweaks: Readd Navbar Layout selection
Change-Id: Iae6bbef371f09cd2bf71763e5aeef2461f31e35c
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="buttons_summary">Configure volume rocker options</string>
     <string name="navigation_options_title">Navigation</string>
     <string name="navigation_options_summary">Configure navigation options</string>
+    <string name="nav_bar_layout">Layout</string>
 
     <!-- Misc -->
     <string name="ok">OK</string>
