--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -395,4 +395,17 @@
     <string name="quick_pulldown_left">Left</string>
     <string name="quick_pulldown_right">Right</string>
     <string name="quick_pulldown_always">Always</string>
+
+    <!-- Battery -->
+    <string name="battery_category_title">Battery</string>
+    <string name="status_bar_battery_style_title">Battery icon style</string>
+    <string name="status_bar_battery_style_icon_portrait">Portrait</string>
+    <string name="status_bar_battery_style_circle">Circle</string>
+    <string name="status_bar_battery_style_dotted_circle">Circle (Dotted)</string>
+    <string name="status_bar_battery_style_filled_circle">Circle (Filled)</string>
+    <string name="status_bar_battery_style_hidden">Hidden</string>
+    <string name="battery_percentage_title">Battery percentage</string>
+    <string name="battery_percentage_off">Disabled</string>
+    <string name="battery_percentage_on">Enabled</string>
+    <string name="battery_percentage_charging">Enabled (While charging)</string>
 </resources>
