--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -756,4 +756,8 @@
     <string name="signal_icon_switch_title">Signal Icon Switch</string>
     <string name="signal_icon_switch_summary">Toggle for Signal icon</string>
 
+    <!-- QS background opacity -->
+    <string name="qs_theme_category">Style</string>
+    <string name="qs_panel_alpha_title">Background opacity</string>
+
 </resources>
