--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -99,11 +99,11 @@
     <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
 
     <!-- Statusbar net monitor -->
-    <string name="network_traffic_state_title">Network Traffic</string>
-    <string name="network_traffic_location">Show net activity</string>
+    <string name="network_traffic_state_title">Network traffic display</string>
+    <string name="network_traffic_location">Traffic indicator placement</string>
     <string name="traffic_disabled">Disabled</string>
     <string name="traffic_statusbar">Statusbar</string>
-    <string name="traffic_expanded_statusbar">Expanded Statusbar</string>
+    <string name="traffic_expanded_statusbar">Expanded header</string>
     <string name="network_traffic_type">Select net activity type</string>
     <string name="show_network_traffic_up">Uplink</string>
     <string name="show_network_traffic_down">Downlink</string>
